[project]
name = "llm-gemini"
version = "0.27"
description = "LLM plugin to access Google's Gemini family of models"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "llm>=0.27",
    "httpx",
    "ijson"
]

[project.urls]
Homepage = "https://github.com/simonw/llm-gemini"
Changelog = "https://github.com/simonw/llm-gemini/releases"
Issues = "https://github.com/simonw/llm-gemini/issues"
CI = "https://github.com/simonw/llm-gemini/actions"

[project.entry-points.llm]
gemini = "llm_gemini"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "cogapp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
