[project]
name = "llm-gemini"
version = "0.30"
description = "LLM plugin to access Google's Gemini family of models"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "llm>=0.27",
    "httpx",
    "ijson"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/simonw/llm-gemini"
Changelog = "https://github.com/simonw/llm-gemini/releases"
Issues = "https://github.com/simonw/llm-gemini/issues"
CI = "https://github.com/simonw/llm-gemini/actions"

[project.entry-points.llm]
gemini = "llm_gemini"

[dependency-groups]
dev = ["pytest", "pytest-recording", "pytest-asyncio", "cogapp"]

[tool.uv]
package = true

[tool.uv.sources]
llm = { path = "/Users/simon/Dropbox/dev/llm", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
